fix the notification on ios & fix the inputter autoheight

--- a/bundles/lincko/app/public/styles/generic/inputter.css
+++ b/bundles/lincko/app/public/styles/generic/inputter.css
@@ -239,7 +239,7 @@
 }
 
 .inputter_uploading_wrapper{
-	height: auto;
+	height: 40px;
 }
 
 .inputter_uploading_wrapper ul{
